[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[metadata]
name = orsopy
version = attr: orsopy.__version__
author = ORSO contributors (see AUTHORS.rst)
author_email = andrew.mccluskey@ess.eu
description = Support library of the Open Reflectometry Standards Organization (ORSO)
long_description = file: README.rst
url = https://github.com/reflectivity/orsopy
license = MIT
license-file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Development Status :: 3 - Alpha

[options]
python_requires = >=3.8
packages =
    orsopy
    orsopy.fileio
install_requires =
    pyyaml>=5.4.1
include_package_data = True
